Fix second scrollbar
Came from setting overflow-y to "scroll"

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -63,7 +63,6 @@ html, body {
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     overflow-x: hidden;
-    overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
 }
 
